# bsort

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure.ac
src/: Makefile.am  Makefile.simple  bsort.c  bsort.cpp  bsort.hpp  j1e8.c  main.cpp  qsort.c
tests/: confirm_sorted.py  generate_dataset.py  pybsort.py
